# KompotEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Cube.kec  LICENSE  README.md  _client_subsystem_8hpp_source.html  _config_manager_8hpp_source.html  _date_time_formatter_8hpp_source.html  _debug_utils_8hpp_source.html  _engine_8hpp_source.html  _engine_config_8hpp_source.html  _engine_defines_8hpp_source.html  _engine_types_8hpp_source.html  _error_handling_8hpp_source.html  _functions_8hpp_source.html  _guid_8hpp_source.html  _i_engine_system_8hpp_source.html  _log_8hpp_source.html  _message_dialog_8hpp_source.html  _options_parser_8hpp_source.html  _rendering_common_8hpp_source.html  _shader_compiler_8hpp_source.html  _shader_manager_8hpp_source.html  _string_utils_8hpp_source.html  _vector_8hpp_source.html  _vulkan_device_8hpp_source.html  _vulkan_pipeline_builder_8hpp_source.html  _vulkan_renderer_8hpp_source.html  _vulkan_shader_8hpp_source.html  _vulkan_types_8hpp_source.html  _vulkan_utils_8hpp_source.html  _window_8hpp_source.html  annotated.html  build_version.cmake  class_guid-members.html  class_guid.html  class_kompot_1_1_client_subsystem-members.html  (+88 more)
.github/: build.yml
.github/workflows/: build.yml  build_windows.yml  cpp.yml  docs.yml  tests.yml
BlenderPlugin/: kem_export.py
Docs/: KEM format.md
Shaders/: CMakeLists.txt  triangle.frag  triangle.vert
Source/: BuildVersion.hpp  CMakeLists.txt  Doxyfile  EngineDefines.hpp  EngineTypes.hpp  global.hpp  main.cpp
Source/Engine/: CMakeLists.txt  Component.hpp  Engine.cpp  Engine.hpp  EngineConfig.hpp  ErrorHandling.cpp  ErrorHandling.hpp  GAPI_enum.cpp  GAPI_enum.hpp  IEngineSystem.hpp  MeshObject.cpp  MeshObject.hpp  World.cpp  World.hpp
Source/Engine/ClientSubsystem/: ClientSubsystem.cpp  ClientSubsystem.hpp  ClientSubsystemLinux.cpp
Source/Engine/ClientSubsystem/Renderer/: IRenderer.hpp  RenderingCommon.hpp
Source/Engine/ClientSubsystem/Renderer/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.hpp
Source/Engine/ClientSubsystem/Renderer/Shaders/: ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderManager.cpp  ShaderManager.hpp
Source/Engine/ClientSubsystem/Renderer/Vulkan/: VulkanDevice.cpp  VulkanDevice.hpp  VulkanMemory.cpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanTypes.h  VulkanTypes.hpp  VulkanUtils.cpp  VulkanUtils.hpp
Source/Engine/ClientSubsystem/Renderer/Vulkan/Shaders/: CMakeLists.txt  triangle.vert
Source/Engine/ClientSubsystem/Window/: Window.cpp  Window.hpp  WindowLinux.cpp  WindowUnixXCB.cpp  WindowWindows.cpp
Source/Engine/CommandlineOptions/: OptionsParser.cpp  OptionsParser.hpp
Source/Engine/Config/: ConfigManager.cpp  ConfigManager.hpp
Source/Engine/DebugUtils/: DebugUtils.cpp  DebugUtils.hpp
Source/Engine/IO/: IOErrors.hpp  MeshesLoader.cpp  MeshesLoader.hpp  ModelsLoader.cpp  ModelsLoader.hpp  ResourcesLoader.cpp  ResourcesLoader.hpp  TgaLoader.cpp  TgaLoader.hpp
Source/Engine/Log/: Log.cpp  Log.hpp
Source/Engine/Platform/: MessageDialog.cpp  MessageDialog.hpp
Source/Engine/PythonModule/: PythonModule.cpp  PythonModule.hpp  PythonObject.cpp  PythonObject.hpp
Source/Engine/Renderer/: Buffer.cpp  Buffer.hpp  DescriptorPoolManager.cpp  DescriptorPoolManager.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  ResourcesMaker.cpp  ResourcesMaker.hpp  Shader.cpp  Shader.hpp  SingleTimeCommandBuffer.cpp  SingleTimeCommandBuffer.hpp  Texture.cpp  Texture.hpp  VulkanUtils.cpp  VulkanUtils.hpp
Source/Engine/WindowSystem/: Window.hpp  WindowXCB.cpp  WindowXCB.hpp
Source/Math/: CMakeLists.txt  Vector.cpp  Vector.hpp
Source/Memory/VulkanAllocator/: CMakeLists.txt  VulkanAllocator.cpp
Source/Misc/: CMakeLists.txt  DateTimeFormatter.hpp  DateTimeStringFormatter.cpp  DateTimeStringFormatter.hpp  Guid.cpp  Guid.hpp  Log.cpp  Log.hpp  TickingObject.cpp  TickingObject.hpp
Source/Misc/DebugUtils/: DebugUtils.cpp  DebugUtils.hpp
Source/Misc/OptionsParser/: OptionsParser.cpp  OptionsParser.hpp
Source/Misc/ProgramOptions/: ProgramOptions.cpp  ProgramOptions.hpp
Source/Misc/StringUtils/: StringUtils.cpp  StringUtils.hpp
Source/Misc/Templates/: Functions.hpp
Tests/: CMakeLists.txt  Vector_tests.cpp  main_tests.cpp
Tests/Misc/StringUtils/: StringUtils_tests.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  pages_0.js  searchdata.js
